# GNS-Practice

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  stylecop.json
00_Chat/: CMakeLists.txt
00_Chat/Client/: CMakeLists.txt  ChatClient.cs  ChatClient.csproj  ChatClient.sln  chat_client.cpp  output.txt  st_chat_client.cpp
00_Chat/Client/.config/: dotnet-tools.json
00_Chat/GodotClient/: ChatClientAutoload.cs  ChatScene.cs  Client.cs  ConnectScene.cs  GNS.cs  GlobalSuppressions.cs  GodotChatClient.csproj  GodotChatClient.sln  chat_scene.tscn  connect_scene.tscn  icon.svg.import  project.godot
00_Chat/Proto/: ChatProtocol.cs  ChatProtocol.proto  ProtoCompat.cs
00_Chat/STServer/: CMakeLists.txt  STChatServer.cs  STChatServer.csproj  STChatServer.sln  st_chat_server.cpp
01_SharedPayload/: CMakeLists.txt
01_SharedPayload/ValidateCpp/: shared_payload_validate.cpp
